// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportStatistics/CardNumberShow render snap loading 1`] = `
<body>
  <div>
    <div
      class="ant-row ant-row-center ant-row-top card-box css-dev-only-do-not-override-txh9fw"
      style="margin-left: -10px; margin-right: -10px;"
    >
      <div
        class="ant-col ant-col-24 ant-col-lg-12 ant-col-xl-12 ant-col-xxl-6 css-dev-only-do-not-override-txh9fw"
        style="padding-left: 10px; padding-right: 10px;"
      >
        <div
          class="item-wrapper card-wrapper marginTop20"
        >
          <div
            class="ant-card ant-card-hoverable css-16wnzq6 css-dev-only-do-not-override-13rucla"
          >
            <div
              class="ant-card-body"
            >
              <header
                class="card-title"
              >
                <span
                  class="title-cont"
                >
                  工单总数
                </span>
                <span
                  class="title-extra"
                >
                  <span
                    class="anticon"
                    role="img"
                    style="color: rgb(69, 131, 255);"
                  >
                    <svg
                      fill="none"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        opacity="0.5"
                        rx="1.5"
                        width="16"
                        x="6"
                        y="10"
                      />
                      <path
                        d="M2 4C2 2.89543 2.89543 2 4 2H17C18.1046 2 19 2.89543 19 4V22H4C2.89543 22 2 21.1046 2 20V4Z"
                        fill="currentColor"
                      />
                      <rect
                        fill="white"
                        height="2"
                        rx="0.5"
                        width="7"
                        x="7"
                        y="8"
                      />
                      <rect
                        fill="white"
                        height="2"
                        rx="0.5"
                        width="7"
                        x="7"
                        y="13"
                      />
                    </svg>
                  </span>
                </span>
              </header>
              <section
                class="card-cont"
              >
                <div
                  class="number-cont"
                >
                  <div
                    class="ant-statistic css-dev-only-do-not-override-13rucla"
                  >
                    <div
                      class="ant-statistic-content"
                      style="font-weight: 700; height: 40px; line-height: 40px; color: rgb(41, 44, 51);"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        <span
                          class="ant-statistic-content-value-int"
                        >
                          0
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="note-cont"
                >
                  截止 
                </div>
              </section>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 ant-col-lg-12 ant-col-xl-12 ant-col-xxl-6 css-dev-only-do-not-override-txh9fw"
        style="padding-left: 10px; padding-right: 10px;"
      >
        <div
          class="item-wrapper card-wrapper marginTop20"
        >
          <div
            class="ant-card ant-card-hoverable css-16wnzq6 css-dev-only-do-not-override-13rucla"
          >
            <div
              class="ant-card-body"
            >
              <header
                class="card-title"
              >
                <span
                  class="title-cont"
                >
                  今日新增
                </span>
                <span
                  class="title-extra"
                >
                  <span
                    class="anticon"
                    role="img"
                    style="color: rgb(69, 131, 255);"
                  >
                    <svg
                      fill="currentColor"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        height="16"
                        opacity="0.5"
                        rx="1.5"
                        width="14"
                        x="5"
                        y="2"
                      />
                      <rect
                        height="17"
                        rx="2"
                        width="20"
                        x="2"
                        y="5"
                      />
                      <path
                        d="m16.243 12.088-2.829 2.829-2.828-2.829-2.829 2.829"
                        stroke="#fff"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </span>
                </span>
              </header>
              <section
                class="card-cont"
              >
                <div
                  class="number-cont"
                >
                  <div
                    class="ant-statistic css-dev-only-do-not-override-13rucla"
                  >
                    <div
                      class="ant-statistic-content"
                      style="font-weight: 700; height: 40px; line-height: 40px; color: rgb(41, 44, 51);"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        <span
                          class="ant-statistic-content-value-int"
                        >
                          0
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="note-cont"
                >
                  截止 
                </div>
              </section>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 ant-col-lg-12 ant-col-xl-12 ant-col-xxl-6 css-dev-only-do-not-override-txh9fw"
        style="padding-left: 10px; padding-right: 10px;"
      >
        <div
          class="item-wrapper card-wrapper marginTop20"
        >
          <div
            class="ant-card ant-card-hoverable css-16wnzq6 css-dev-only-do-not-override-13rucla"
          >
            <div
              class="ant-card-body"
            >
              <header
                class="card-title"
              >
                <span
                  class="title-cont"
                >
                  工单平均审核时间
                </span>
                <span
                  class="title-extra"
                >
                  <span
                    class="anticon"
                    role="img"
                    style="color: rgb(69, 131, 255);"
                  >
                    <svg
                      fill="currentColor"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="12"
                        cy="12"
                        fill="currentColor"
                        r="11"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke="#fff"
                        stroke-width="2"
                      />
                      <path
                        d="M12 7.5V12h3.5"
                        stroke="#fff"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </span>
                </span>
              </header>
              <section
                class="card-cont"
              >
                <div
                  class="number-cont"
                >
                  0
                </div>
                <div
                  class="note-cont"
                >
                  <div
                    class="note-wrapper"
                  />
                </div>
              </section>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 ant-col-lg-12 ant-col-xl-12 ant-col-xxl-6 css-dev-only-do-not-override-txh9fw"
        style="padding-left: 10px; padding-right: 10px;"
      >
        <div
          class="item-wrapper card-wrapper marginTop20"
        >
          <div
            class="ant-card ant-card-hoverable css-16wnzq6 css-dev-only-do-not-override-13rucla"
          >
            <div
              class="ant-card-body"
            >
              <header
                class="card-title"
              >
                <span
                  class="title-cont"
                >
                  审核通过率
                </span>
                <span
                  class="title-extra"
                >
                  <span
                    class="anticon"
                    role="img"
                    style="color: rgb(69, 131, 255);"
                  >
                    <svg
                      fill="currentColor"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        fill="currentColor"
                        height="15"
                        opacity="0.5"
                        rx="1.5"
                        width="15"
                        x="8"
                        y="1"
                      />
                      <rect
                        fill="currentColor"
                        height="18"
                        rx="2"
                        width="18"
                        x="2"
                        y="4"
                      />
                      <path
                        d="m7.8 13 2.475 2.475 4.243-4.243"
                        stroke="#fff"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </span>
                </span>
              </header>
              <section
                class="card-cont"
              >
                <div
                  class="number-cont"
                >
                  0
                </div>
                <div
                  class="note-cont"
                >
                  <div
                    class="note-wrapper"
                  />
                </div>
              </section>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ReportStatistics/CardNumberShow render snap when api return data 1`] = `
<body>
  <div>
    <div
      class="ant-row ant-row-center ant-row-top card-box css-dev-only-do-not-override-txh9fw"
      style="margin-left: -10px; margin-right: -10px;"
    >
      <div
        class="ant-col ant-col-24 ant-col-lg-12 ant-col-xl-12 ant-col-xxl-6 css-dev-only-do-not-override-txh9fw"
        style="padding-left: 10px; padding-right: 10px;"
      >
        <div
          class="item-wrapper card-wrapper marginTop20"
        >
          <div
            class="ant-card ant-card-hoverable css-16wnzq6 css-dev-only-do-not-override-13rucla"
          >
            <div
              class="ant-card-body"
            >
              <header
                class="card-title"
              >
                <span
                  class="title-cont"
                >
                  工单总数
                </span>
                <span
                  class="title-extra"
                >
                  <span
                    class="anticon"
                    role="img"
                    style="color: rgb(69, 131, 255);"
                  >
                    <svg
                      fill="none"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        opacity="0.5"
                        rx="1.5"
                        width="16"
                        x="6"
                        y="10"
                      />
                      <path
                        d="M2 4C2 2.89543 2.89543 2 4 2H17C18.1046 2 19 2.89543 19 4V22H4C2.89543 22 2 21.1046 2 20V4Z"
                        fill="currentColor"
                      />
                      <rect
                        fill="white"
                        height="2"
                        rx="0.5"
                        width="7"
                        x="7"
                        y="8"
                      />
                      <rect
                        fill="white"
                        height="2"
                        rx="0.5"
                        width="7"
                        x="7"
                        y="13"
                      />
                    </svg>
                  </span>
                </span>
              </header>
              <section
                class="card-cont"
              >
                <div
                  class="number-cont"
                >
                  99
                </div>
                <div
                  class="note-cont"
                >
                  截止 2010-01-01 08:00:00
                </div>
              </section>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 ant-col-lg-12 ant-col-xl-12 ant-col-xxl-6 css-dev-only-do-not-override-txh9fw"
        style="padding-left: 10px; padding-right: 10px;"
      >
        <div
          class="item-wrapper card-wrapper marginTop20"
        >
          <div
            class="ant-card ant-card-hoverable css-16wnzq6 css-dev-only-do-not-override-13rucla"
          >
            <div
              class="ant-card-body"
            >
              <header
                class="card-title"
              >
                <span
                  class="title-cont"
                >
                  今日新增
                </span>
                <span
                  class="title-extra"
                >
                  <span
                    class="anticon"
                    role="img"
                    style="color: rgb(69, 131, 255);"
                  >
                    <svg
                      fill="currentColor"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        height="16"
                        opacity="0.5"
                        rx="1.5"
                        width="14"
                        x="5"
                        y="2"
                      />
                      <rect
                        height="17"
                        rx="2"
                        width="20"
                        x="2"
                        y="5"
                      />
                      <path
                        d="m16.243 12.088-2.829 2.829-2.828-2.829-2.829 2.829"
                        stroke="#fff"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </span>
                </span>
              </header>
              <section
                class="card-cont"
              >
                <div
                  class="number-cont"
                >
                  1
                </div>
                <div
                  class="note-cont"
                >
                  截止 2010-01-01 08:00:00
                </div>
              </section>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 ant-col-lg-12 ant-col-xl-12 ant-col-xxl-6 css-dev-only-do-not-override-txh9fw"
        style="padding-left: 10px; padding-right: 10px;"
      >
        <div
          class="item-wrapper card-wrapper marginTop20"
        >
          <div
            class="ant-card ant-card-hoverable css-16wnzq6 css-dev-only-do-not-override-13rucla"
          >
            <div
              class="ant-card-body"
            >
              <header
                class="card-title"
              >
                <span
                  class="title-cont"
                >
                  工单平均审核时间
                </span>
                <span
                  class="title-extra"
                >
                  <span
                    class="anticon"
                    role="img"
                    style="color: rgb(69, 131, 255);"
                  >
                    <svg
                      fill="currentColor"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="12"
                        cy="12"
                        fill="currentColor"
                        r="11"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke="#fff"
                        stroke-width="2"
                      />
                      <path
                        d="M12 7.5V12h3.5"
                        stroke="#fff"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </span>
                </span>
              </header>
              <section
                class="card-cont"
              >
                <div
                  class="number-cont"
                >
                  20min
                </div>
                <div
                  class="note-cont"
                >
                  <div
                    class="note-wrapper"
                  />
                </div>
              </section>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 ant-col-lg-12 ant-col-xl-12 ant-col-xxl-6 css-dev-only-do-not-override-txh9fw"
        style="padding-left: 10px; padding-right: 10px;"
      >
        <div
          class="item-wrapper card-wrapper marginTop20"
        >
          <div
            class="ant-card ant-card-hoverable css-16wnzq6 css-dev-only-do-not-override-13rucla"
          >
            <div
              class="ant-card-body"
            >
              <header
                class="card-title"
              >
                <span
                  class="title-cont"
                >
                  审核通过率
                </span>
                <span
                  class="title-extra"
                >
                  <span
                    class="anticon"
                    role="img"
                    style="color: rgb(69, 131, 255);"
                  >
                    <svg
                      fill="currentColor"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        fill="currentColor"
                        height="15"
                        opacity="0.5"
                        rx="1.5"
                        width="15"
                        x="8"
                        y="1"
                      />
                      <rect
                        fill="currentColor"
                        height="18"
                        rx="2"
                        width="18"
                        x="2"
                        y="4"
                      />
                      <path
                        d="m7.8 13 2.475 2.475 4.243-4.243"
                        stroke="#fff"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </span>
                </span>
              </header>
              <section
                class="card-cont"
              >
                <div
                  class="number-cont"
                >
                  90%
                </div>
                <div
                  class="note-cont"
                >
                  <div
                    class="note-wrapper"
                  />
                </div>
              </section>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ReportStatistics/CardNumberShow render snap when api return empty 1`] = `
<body>
  <div>
    <div
      class="ant-row ant-row-center ant-row-top card-box css-dev-only-do-not-override-txh9fw"
      style="margin-left: -10px; margin-right: -10px;"
    >
      <div
        class="ant-col ant-col-24 ant-col-lg-12 ant-col-xl-12 ant-col-xxl-6 css-dev-only-do-not-override-txh9fw"
        style="padding-left: 10px; padding-right: 10px;"
      >
        <div
          class="item-wrapper card-wrapper marginTop20"
        >
          <div
            class="ant-card ant-card-hoverable css-16wnzq6 css-dev-only-do-not-override-13rucla"
          >
            <div
              class="ant-card-body"
            >
              <header
                class="card-title"
              >
                <span
                  class="title-cont"
                >
                  工单总数
                </span>
                <span
                  class="title-extra"
                >
                  <span
                    class="anticon"
                    role="img"
                    style="color: rgb(69, 131, 255);"
                  >
                    <svg
                      fill="none"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        opacity="0.5"
                        rx="1.5"
                        width="16"
                        x="6"
                        y="10"
                      />
                      <path
                        d="M2 4C2 2.89543 2.89543 2 4 2H17C18.1046 2 19 2.89543 19 4V22H4C2.89543 22 2 21.1046 2 20V4Z"
                        fill="currentColor"
                      />
                      <rect
                        fill="white"
                        height="2"
                        rx="0.5"
                        width="7"
                        x="7"
                        y="8"
                      />
                      <rect
                        fill="white"
                        height="2"
                        rx="0.5"
                        width="7"
                        x="7"
                        y="13"
                      />
                    </svg>
                  </span>
                </span>
              </header>
              <section
                class="card-cont"
              >
                <div
                  class="number-cont"
                >
                  0
                </div>
                <div
                  class="note-cont"
                >
                  截止 2010-01-01 08:00:00
                </div>
              </section>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 ant-col-lg-12 ant-col-xl-12 ant-col-xxl-6 css-dev-only-do-not-override-txh9fw"
        style="padding-left: 10px; padding-right: 10px;"
      >
        <div
          class="item-wrapper card-wrapper marginTop20"
        >
          <div
            class="ant-card ant-card-hoverable css-16wnzq6 css-dev-only-do-not-override-13rucla"
          >
            <div
              class="ant-card-body"
            >
              <header
                class="card-title"
              >
                <span
                  class="title-cont"
                >
                  今日新增
                </span>
                <span
                  class="title-extra"
                >
                  <span
                    class="anticon"
                    role="img"
                    style="color: rgb(69, 131, 255);"
                  >
                    <svg
                      fill="currentColor"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        height="16"
                        opacity="0.5"
                        rx="1.5"
                        width="14"
                        x="5"
                        y="2"
                      />
                      <rect
                        height="17"
                        rx="2"
                        width="20"
                        x="2"
                        y="5"
                      />
                      <path
                        d="m16.243 12.088-2.829 2.829-2.828-2.829-2.829 2.829"
                        stroke="#fff"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </span>
                </span>
              </header>
              <section
                class="card-cont"
              >
                <div
                  class="number-cont"
                >
                  0
                </div>
                <div
                  class="note-cont"
                >
                  截止 2010-01-01 08:00:00
                </div>
              </section>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 ant-col-lg-12 ant-col-xl-12 ant-col-xxl-6 css-dev-only-do-not-override-txh9fw"
        style="padding-left: 10px; padding-right: 10px;"
      >
        <div
          class="item-wrapper card-wrapper marginTop20"
        >
          <div
            class="ant-card ant-card-hoverable css-16wnzq6 css-dev-only-do-not-override-13rucla"
          >
            <div
              class="ant-card-body"
            >
              <header
                class="card-title"
              >
                <span
                  class="title-cont"
                >
                  工单平均审核时间
                </span>
                <span
                  class="title-extra"
                >
                  <span
                    class="anticon"
                    role="img"
                    style="color: rgb(69, 131, 255);"
                  >
                    <svg
                      fill="currentColor"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="12"
                        cy="12"
                        fill="currentColor"
                        r="11"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke="#fff"
                        stroke-width="2"
                      />
                      <path
                        d="M12 7.5V12h3.5"
                        stroke="#fff"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </span>
                </span>
              </header>
              <section
                class="card-cont"
              >
                <div
                  class="number-cont"
                >
                  0min
                </div>
                <div
                  class="note-cont"
                >
                  <div
                    class="note-wrapper"
                  />
                </div>
              </section>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 ant-col-lg-12 ant-col-xl-12 ant-col-xxl-6 css-dev-only-do-not-override-txh9fw"
        style="padding-left: 10px; padding-right: 10px;"
      >
        <div
          class="item-wrapper card-wrapper marginTop20"
        >
          <div
            class="ant-card ant-card-hoverable css-16wnzq6 css-dev-only-do-not-override-13rucla"
          >
            <div
              class="ant-card-body"
            >
              <header
                class="card-title"
              >
                <span
                  class="title-cont"
                >
                  审核通过率
                </span>
                <span
                  class="title-extra"
                >
                  <span
                    class="anticon"
                    role="img"
                    style="color: rgb(69, 131, 255);"
                  >
                    <svg
                      fill="currentColor"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        fill="currentColor"
                        height="15"
                        opacity="0.5"
                        rx="1.5"
                        width="15"
                        x="8"
                        y="1"
                      />
                      <rect
                        fill="currentColor"
                        height="18"
                        rx="2"
                        width="18"
                        x="2"
                        y="4"
                      />
                      <path
                        d="m7.8 13 2.475 2.475 4.243-4.243"
                        stroke="#fff"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </span>
                </span>
              </header>
              <section
                class="card-cont"
              >
                <div
                  class="number-cont"
                >
                  0%
                </div>
                <div
                  class="note-cont"
                >
                  <div
                    class="note-wrapper"
                  />
                </div>
              </section>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ReportStatistics/CardNumberShow render snap when api return error 1`] = `
<body>
  <div>
    <div
      class="ant-row ant-row-center ant-row-top card-box css-dev-only-do-not-override-txh9fw"
      style="margin-left: -10px; margin-right: -10px;"
    >
      <div
        class="ant-col ant-col-24 ant-col-lg-12 ant-col-xl-12 ant-col-xxl-6 css-dev-only-do-not-override-txh9fw"
        style="padding-left: 10px; padding-right: 10px;"
      >
        <div
          class="item-wrapper card-wrapper marginTop20"
        >
          <div
            class="ant-card ant-card-hoverable css-16wnzq6 css-dev-only-do-not-override-13rucla"
          >
            <div
              class="ant-card-body"
            >
              <header
                class="card-title"
              >
                <span
                  class="title-cont"
                >
                  工单总数
                </span>
                <span
                  class="title-extra"
                >
                  <span
                    class="anticon"
                    role="img"
                    style="color: rgb(69, 131, 255);"
                  >
                    <svg
                      fill="none"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        opacity="0.5"
                        rx="1.5"
                        width="16"
                        x="6"
                        y="10"
                      />
                      <path
                        d="M2 4C2 2.89543 2.89543 2 4 2H17C18.1046 2 19 2.89543 19 4V22H4C2.89543 22 2 21.1046 2 20V4Z"
                        fill="currentColor"
                      />
                      <rect
                        fill="white"
                        height="2"
                        rx="0.5"
                        width="7"
                        x="7"
                        y="8"
                      />
                      <rect
                        fill="white"
                        height="2"
                        rx="0.5"
                        width="7"
                        x="7"
                        y="13"
                      />
                    </svg>
                  </span>
                </span>
              </header>
              <section
                class="card-cont"
              >
                <div
                  class="number-cont"
                >
                  <div
                    class="ant-statistic css-dev-only-do-not-override-13rucla"
                  >
                    <div
                      class="ant-statistic-content"
                      style="font-weight: 700; height: 40px; line-height: 40px; color: rgb(41, 44, 51);"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        <span
                          class="ant-statistic-content-value-int"
                        >
                          0
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="note-cont"
                >
                  截止 
                </div>
              </section>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 ant-col-lg-12 ant-col-xl-12 ant-col-xxl-6 css-dev-only-do-not-override-txh9fw"
        style="padding-left: 10px; padding-right: 10px;"
      >
        <div
          class="item-wrapper card-wrapper marginTop20"
        >
          <div
            class="ant-card ant-card-hoverable css-16wnzq6 css-dev-only-do-not-override-13rucla"
          >
            <div
              class="ant-card-body"
            >
              <header
                class="card-title"
              >
                <span
                  class="title-cont"
                >
                  今日新增
                </span>
                <span
                  class="title-extra"
                >
                  <span
                    class="anticon"
                    role="img"
                    style="color: rgb(69, 131, 255);"
                  >
                    <svg
                      fill="currentColor"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        height="16"
                        opacity="0.5"
                        rx="1.5"
                        width="14"
                        x="5"
                        y="2"
                      />
                      <rect
                        height="17"
                        rx="2"
                        width="20"
                        x="2"
                        y="5"
                      />
                      <path
                        d="m16.243 12.088-2.829 2.829-2.828-2.829-2.829 2.829"
                        stroke="#fff"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </span>
                </span>
              </header>
              <section
                class="card-cont"
              >
                <div
                  class="number-cont"
                >
                  <div
                    class="ant-statistic css-dev-only-do-not-override-13rucla"
                  >
                    <div
                      class="ant-statistic-content"
                      style="font-weight: 700; height: 40px; line-height: 40px; color: rgb(41, 44, 51);"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        <span
                          class="ant-statistic-content-value-int"
                        >
                          0
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="note-cont"
                >
                  截止 
                </div>
              </section>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 ant-col-lg-12 ant-col-xl-12 ant-col-xxl-6 css-dev-only-do-not-override-txh9fw"
        style="padding-left: 10px; padding-right: 10px;"
      >
        <div
          class="item-wrapper card-wrapper marginTop20"
        >
          <div
            class="ant-card ant-card-hoverable css-16wnzq6 css-dev-only-do-not-override-13rucla"
          >
            <div
              class="ant-card-body"
            >
              <header
                class="card-title"
              >
                <span
                  class="title-cont"
                >
                  工单平均审核时间
                </span>
                <span
                  class="title-extra"
                >
                  <span
                    class="anticon"
                    role="img"
                    style="color: rgb(69, 131, 255);"
                  >
                    <svg
                      fill="currentColor"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="12"
                        cy="12"
                        fill="currentColor"
                        r="11"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke="#fff"
                        stroke-width="2"
                      />
                      <path
                        d="M12 7.5V12h3.5"
                        stroke="#fff"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </span>
                </span>
              </header>
              <section
                class="card-cont"
              >
                <div
                  class="number-cont"
                >
                  0
                </div>
                <div
                  class="note-cont"
                >
                  <div
                    class="note-wrapper"
                  />
                </div>
              </section>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 ant-col-lg-12 ant-col-xl-12 ant-col-xxl-6 css-dev-only-do-not-override-txh9fw"
        style="padding-left: 10px; padding-right: 10px;"
      >
        <div
          class="item-wrapper card-wrapper marginTop20"
        >
          <div
            class="ant-card ant-card-hoverable css-16wnzq6 css-dev-only-do-not-override-13rucla"
          >
            <div
              class="ant-card-body"
            >
              <header
                class="card-title"
              >
                <span
                  class="title-cont"
                >
                  审核通过率
                </span>
                <span
                  class="title-extra"
                >
                  <span
                    class="anticon"
                    role="img"
                    style="color: rgb(69, 131, 255);"
                  >
                    <svg
                      fill="currentColor"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        fill="currentColor"
                        height="15"
                        opacity="0.5"
                        rx="1.5"
                        width="15"
                        x="8"
                        y="1"
                      />
                      <rect
                        fill="currentColor"
                        height="18"
                        rx="2"
                        width="18"
                        x="2"
                        y="4"
                      />
                      <path
                        d="m7.8 13 2.475 2.475 4.243-4.243"
                        stroke="#fff"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </span>
                </span>
              </header>
              <section
                class="card-cont"
              >
                <div
                  class="number-cont"
                >
                  0
                </div>
                <div
                  class="note-cont"
                >
                  <div
                    class="note-wrapper"
                  />
                </div>
              </section>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
